--- a/sass/spmemo.scss
+++ b/sass/spmemo.scss
@@ -17,3 +17,15 @@ td.code {
 textarea#docbox, textarea#codebox {
   width: 50%;
 }
+
+div.navbar-brand {
+  cursor: pointer;
+}
+
+.notransition * {
+  -webkit-transition: none !important;
+  -moz-transition: none !important;
+  -o-transition: none !important;
+  -ms-transition: none !important;
+  transition: none !important;
+}
