Now a user sees error messages when the forms are blank [finished #107713916]

--- a/public/css/spmemo.css
+++ b/public/css/spmemo.css
@@ -10,11 +10,11 @@ td.code {
 .table > tbody > tr > td {
   border-top: 0; }
 
-textarea#docbox, textarea#codebox {
-  width: 50%; }
-
 div.navbar-brand {
   cursor: pointer; }
+
+.error-msg {
+  color: red; }
 
 .notransition * {
   -webkit-transition: none !important;
