--- a/public/views/templates/modal.html
+++ b/public/views/templates/modal.html
@@ -5,15 +5,20 @@
 
 <div class="modal-body">
   <div class="form-group">
+    <span ng-if="!vm.title" class="error-msg"> Title must not be empty. </span>
     <input type="text" id="titlebox" class="form-control" ng-model='vm.title' placeholder="Title" />
   </div>
-  <div class="form-group form-inline">
+  <div class="form-group">
+    <span ng-if="!vm.doc" class="error-msg"> Doc must not be empty. </span>
     <textarea id="docbox" class="form-control" rows="10" ng-model='vm.doc' placeholder="Document"></textarea>
+  </div>
+  <div class="form-group">
+    <span ng-if="!vm.code" class="error-msg"> Code must not be empty. </span>
     <textarea id="codebox" class="form-control" rows="10" ng-model='vm.code' placeholder="Code"></textarea>
   </div>
 </div>
 
 <div class="modal-footer">
   <button id="close-modal" type="button" class="btn btn-default" ng-click="vm.closeModal()"> Close</button>
-  <button id="addmemo" type="button" class="btn btn-primary" ng-click="vm.addMemo()">Save changes</button>
+  <button id="addmemo" type="button" class="btn btn-primary" ng-click="vm.addMemo()" ng-disabled="!vm.doc || !vm.code || !vm.title">Save changes</button>
 </div>
