--- a/public/views/main.html
+++ b/public/views/main.html
@@ -20,6 +20,16 @@
           <p class="description" ng-bind-html="memo.doc"></p>
         </td>
         <td class="code col-lg-8">
+          <button type="button" class="btn btn-danger btn-xs remove" ng-click="vm.delete(memo.title)" aria-label="Left Align">
+            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+          </button>
+          <button type="button" class="btn btn-info btn-xs" aria-label="Left Align">
+            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+          </button>
+          <button type="button" class="btn btn-info btn-xs" aria-label="Left Align">
+            <span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span>
+          </button>
+
           <pre>
             <code ng-bind-html="memo.code"></code>
           </pre>
@@ -27,4 +37,5 @@
       </tr>
     </table>
   </div>
+
 </div>
