--- a/public/views/main.html
+++ b/public/views/main.html
@@ -23,7 +23,7 @@
           <button type="button" class="btn btn-danger btn-xs remove" ng-click="vm.delete(memo.title)" aria-label="Left Align">
             <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
           </button>
-          <button type="button" class="btn btn-info btn-xs" aria-label="Left Align">
+          <button type="button" class="btn btn-info btn-xs edit" ng-click="vm.edit(memo.title)" aria-label="Left Align">
             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
           </button>
           <button type="button" class="btn btn-info btn-xs" aria-label="Left Align">
