Add export feature [finished #107009560]

--- a/public/views/main.html
+++ b/public/views/main.html
@@ -6,7 +6,7 @@
             <h1>Single Page Memo App <small>memo, memo, memo</small></h1>
             <div class="navbar-brand" id="addLink" ng-click="vm.openModal()">Add a memo</div>
             <a class="navbar-brand" id="importLink" href="/#/">Import</a>
-            <div class="navbar-brand" id="exportLink" ng-click="vm.saveMemo()">Export</div>
+            <a class="navbar-brand" id="exportLink" href="{{ vm.href_ex }}">Export</a>
           </div>
         </div>
     </nav>
