Add import function [finished #107092882]

--- a/public/css/spmemo.css
+++ b/public/css/spmemo.css
@@ -10,7 +10,7 @@ td.code {
 .table > tbody > tr > td {
   border-top: 0; }
 
-div.navbar-brand {
+.navbar-brand {
   cursor: pointer; }
 
 .error-msg {
