--- a/public/views/main.html
+++ b/public/views/main.html
@@ -5,7 +5,12 @@
           <div class="page-header">
             <h1>Single Page Memo App <small>memo, memo, memo</small></h1>
             <div class="navbar-brand" id="addLink" ng-click="vm.openModal()">Add a memo</div>
-            <a class="navbar-brand" id="importLink" href="/#/">Import</a>
+
+            <input id="lefile" type="file" style="display:none">
+            <div class="input-append">
+              <a id="importLink" class="navbar-brand" ng-click="vm.importMemo()">Import</a>
+            </div>
+
             <a class="navbar-brand" id="exportLink" href="{{ vm.href_ex }}">Export</a>
           </div>
         </div>
