--- a/public/views/main.html
+++ b/public/views/main.html
@@ -26,7 +26,7 @@
           <button type="button" class="btn btn-info btn-xs edit" ng-click="vm.edit(memo.title)" aria-label="Left Align">
             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
           </button>
-          <button type="button" class="btn btn-info btn-xs" aria-label="Left Align">
+          <button clipboard text="memo.code" class="copy btn btn-info btn-xs" on-copied="vm.copySucceed()" on-error="vm.copyFailed(err)" aria-label="Left Align">
             <span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span>
           </button>
 
@@ -37,5 +37,6 @@
       </tr>
     </table>
   </div>
+
 
 </div>
