--- a/public/views/main.html
+++ b/public/views/main.html
@@ -14,29 +14,30 @@
 
   <div class="container-fluid">
     <table id="contentsTbl" class='table'>
-      <tr id="{{ memo.title }}" ng-repeat="memo in vm.memos" class="item">
-        <td class="doc col-lg-4">
-          <h3 class="title">{{ memo.title }}</h3> 
-          <p class="description" ng-bind-html="memo.doc"></p>
-        </td>
-        <td class="code col-lg-8">
-          <button type="button" class="btn btn-danger btn-xs remove" ng-click="vm.delete(memo.title)" aria-label="Left Align">
-            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-          </button>
-          <button type="button" class="btn btn-info btn-xs edit" ng-click="vm.edit(memo.title)" aria-label="Left Align">
-            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-          </button>
-          <button clipboard text="memo.code" class="copy btn btn-info btn-xs" on-copied="vm.copySucceed()" on-error="vm.copyFailed(err)" aria-label="Left Align">
-            <span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span>
-          </button>
-
-          <pre>
-            <code ng-bind-html="memo.code"></code>
-          </pre>
-        </td>
-      </tr>
+      <tbody ui-sortable="vm.sortableOptions" ng-model="vm.memos">
+        <tr id="item{{ $index }}" ng-repeat="memo in vm.memos" class="item">
+          <td class="doc col-lg-4">
+            <h3 class="title">{{ memo.title }}</h3> 
+            <p class="description" ng-bind-html="memo.doc"></p>
+          </td>
+          <td class="code col-lg-8">
+            <button type="button" class="btn btn-danger btn-xs remove" ng-click="vm.delete($index)" aria-label="Left Align">
+              <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+            </button>
+            <button type="button" class="btn btn-info btn-xs edit" ng-click="vm.edit($index)" aria-label="Left Align">
+              <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+            </button>
+            <button clipboard text="memo.code" class="btn btn-info btn-xs copy" on-copied="vm.copySucceed()" on-error="vm.copyFailed(err)" aria-label="Left Align">
+              <span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span>
+            </button>
+  
+            <pre>
+              <code ng-bind-html="memo.code"></code>
+            </pre>
+          </td>
+        </tr>
+      </tbody>
     </table>
   </div>
-
 
 </div>
