--- a/public/views/main.html
+++ b/public/views/main.html
@@ -21,10 +21,10 @@
             <p class="description" ng-bind-html="memo.doc"></p>
           </td>
           <td class="code col-lg-8">
-            <button type="button" class="btn btn-danger btn-xs remove" ng-click="vm.delete($index)" aria-label="Left Align">
+            <button type="button" class="btn btn-danger btn-xs remove" ng-click="vm.removeMemo($index)" aria-label="Left Align">
               <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
             </button>
-            <button type="button" class="btn btn-info btn-xs edit" ng-click="vm.edit($index)" aria-label="Left Align">
+            <button type="button" class="btn btn-info btn-xs edit" ng-click="vm.editMemo($index)" aria-label="Left Align">
               <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
             </button>
             <button clipboard text="memo.code" class="btn btn-info btn-xs copy" on-copied="vm.copySucceed()" on-error="vm.copyFailed(err)" aria-label="Left Align">
