--- a/public/views/main.html
+++ b/public/views/main.html
@@ -1,43 +1,53 @@
 <div>
   <div class="container-fluid">
     <nav class="navbar navbar-default">
-      <div class="navbar-brand" id="addLink" ng-click="vm.openModal()">Add a memo</div>
+      <div class="navbar-brand" id="addLink" ng-click="vm.openAddModal()">Add a memo</div>
     
       <input id="lefile" type="file" style="display:none">
       <div class="input-append">
         <a id="importLink" class="navbar-brand" ng-click="vm.importMemo()">Import</a>
       </div>
-    
       <a class="navbar-brand" id="exportLink" href="{{ vm.href_ex }}">Export</a>
+      <div class="navbar-brand" id="github" ng-click="vm.openGithubModal()">Github</div>
     </nav>
   </div>
-
-  <div class="container-fluid">
-    <table id="contentsTbl" class='table'>
-      <tbody ui-sortable="vm.sortableOptions" ng-model="vm.memos">
-        <tr id="item{{ $index }}" ng-repeat="memo in vm.memos" class="item">
-          <td class="doc col-lg-4">
-            <h3 class="title">{{ memo.title }}</h3> 
-            <p class="description" ng-bind-html="memo.doc"></p>
-          </td>
-          <td class="code col-lg-8">
-            <button type="button" class="btn btn-danger btn-xs remove" ng-click="vm.removeMemo($index)" aria-label="Left Align">
-              <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-            </button>
-            <button type="button" class="btn btn-info btn-xs edit" ng-click="vm.editMemo($index)" aria-label="Left Align">
-              <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-            </button>
-            <button clipboard text="memo.code" class="btn btn-info btn-xs copy" on-copied="vm.copySucceed()" on-error="vm.copyFailed(err)" aria-label="Left Align">
-              <span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span>
-            </button>
   
-            <pre>
-              <code ng-bind-html="memo.code"></code>
-            </pre>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+  <div class = "container-fluid" id="main">
+    <div class = "row">
+      <div class="sidebar col-lg-2">
+        <h4 id="path">{{ vm.path }}</h4>
+        <ul ng-repeat="file in vm.files">
+          <li><a class="file" href = "{{ file.url}}" >{{ file.name }}</a></li>
+        </ul>
+      </div>
+  
+      <div class="col-lg-10 row">
+        <table id="contentsTbl" class='table'>
+          <tbody ui-sortable="vm.sortableOptions" ng-model="vm.memos">
+            <tr id="item{{ $index }}" ng-repeat="memo in vm.memos" class="item">
+              <td class="doc col-lg-4">
+                <h3 class="title">{{ memo.title }}</h3> 
+                <p class="description" ng-bind-html="memo.doc"></p>
+              </td>
+              <td class="code col-lg-8">
+                <button type="button" class="btn btn-danger btn-xs remove" ng-click="vm.removeMemo($index)" aria-label="Left Align">
+                  <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                </button>
+                <button type="button" class="btn btn-info btn-xs edit" ng-click="vm.editMemo($index)" aria-label="Left Align">
+                  <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                </button>
+                <button clipboard text="memo.code" class="btn btn-info btn-xs copy" on-copied="vm.copySucceed()" on-error="vm.copyFailed(err)" aria-label="Left Align">
+                  <span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span>
+                </button>
+      
+                <pre>
+                  <code ng-bind="memo.code"></code>
+                </pre>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
   </div>
-
 </div>
