--- a/sass/spmemo.scss
+++ b/sass/spmemo.scss
@@ -46,3 +46,23 @@ td:hover button {
 table#contentsTbl tr {
   cursor: move;
 }
+
+#main {
+  overflow: hidden;
+}
+
+.sidebar {
+  background-color: #696969;
+  padding-bottom: 10000px;
+  margin-bottom: -10000px;
+  margin-right: 20px;
+}
+
+/* .sidebar ul { */
+  /* list-style: none; */
+/* } */
+
+.sidebar li a{
+  display: block;
+}
+
