--- a/public/views/main.html
+++ b/public/views/main.html
@@ -21,35 +21,53 @@
         <ul ng-repeat="file in vm.files">
           <li><span class="file" ng-click="vm.openGithubMemo(file.name, file.url)" >{{ file.name }}</span></li>
         </ul>
-        <span>Current: {{ vm.filename}}</span>
+        <span>Current: {{ vm.filename }}</span>
       </div>
   
       <div class="col-md-10 row">
+
         <table id="contentsTbl" class='table'>
+
           <tbody ui-sortable="vm.sortableOptions" ng-model="vm.memos">
+
             <tr id="item{{ $index }}" ng-repeat="memo in vm.memos" class="item">
+
               <td class="doc col-md-4">
                 <h3 class="title">{{ memo.title }}</h3> 
                 <p class="description" ng-bind-html="memo.doc"></p>
               </td>
+              
               <td class="code col-md-8">
-                <button type="button" class="btn btn-danger btn-xs remove" ng-click="vm.removeMemo($index)" aria-label="Left Align">
-                  <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                </button>
-                <button type="button" class="btn btn-info btn-xs edit" ng-click="vm.editMemo($index)" aria-label="Left Align">
-                  <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                </button>
-                <button clipboard text="memo.code" class="btn btn-info btn-xs copy" on-copied="vm.copySucceed()" on-error="vm.copyFailed(err)" aria-label="Left Align">
-                  <span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span>
-                </button>
-      
-                <pre>
-                  <code ng-bind="memo.code"></code>
-                </pre>
+
+                <table style="width: 100%;">
+                  <tr ng-repeat="code in memo.code" >
+                    <td>
+
+                      <button type="button" class="btn btn-danger btn-xs remove" ng-click="vm.removeMemo($index)" aria-label="Left Align">
+                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                      </button>
+
+                      <button type="button" class="btn btn-info btn-xs edit" ng-click="vm.editMemo($index)" aria-label="Left Align">
+                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                      </button>
+
+                      <button clipboard text="memo.code" class="btn btn-info btn-xs copy" on-copied="vm.copySucceed()" on-error="vm.copyFailed(err)" aria-label="Left Align">
+                        <span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span>
+                      </button>
+
+                      <pre>
+                        <code ng-bind="code"></code>
+                      </pre>
+
+                    </td>
+                  </tr>
+                </table>
+
               </td>
             </tr>
           </tbody>
         </table>
+
       </div>
     </div>
   </div>
