--- a/public/views/templates/modal-memo.html
+++ b/public/views/templates/modal-memo.html
@@ -6,17 +6,22 @@
 <div class="modal-body">
   <div class="form-group">
     <span ng-if="!vm.title" class="error-msg"> Title must not be empty. </span>
-    <input type="text" id="titlebox" class="form-control" ng-model='vm.title' placeholder="Title" />
+    <input type="text" id="titlebox" class="form-control" ng-model="vm.title" placeholder="Title" />
   </div>
   <div class="form-group">
-    <textarea id="docbox" class="form-control" rows="10" ng-model='vm.doc' placeholder="Document"></textarea>
+    <textarea id="docbox" class="form-control" rows="10" ng-model="vm.doc" placeholder="Document"></textarea>
   </div>
   <div class="form-group">
-    <textarea id="codebox" class="form-control" rows="10" ng-model='vm.code' placeholder="Code"></textarea>
+    <textarea class="code-box form-control" rows="10" ng-model="vm.code[0]" placeholder="Code"></textarea>
   </div>
+
+  <div id="space-for-codes"></div>
+
 </div>
 
 <div class="modal-footer">
+  <button id="add-code" add-code-box class="btn btn-default">Add code box</button>
+
   <button id="close-modal" type="button" class="btn btn-default" ng-click="vm.closeModal()"> Close</button>
   <button id="addmemo" type="button" class="btn btn-primary" ng-click="vm.addMemo()" ng-disabled="!vm.title">Save changes</button>
 </div>
