--- a/public/views/templates/modal-memo.html
+++ b/public/views/templates/modal-memo.html
@@ -11,16 +11,17 @@
   <div class="form-group">
     <textarea id="docbox" class="form-control" rows="10" ng-model="vm.doc" placeholder="Document"></textarea>
   </div>
-  <div class="form-group">
-    <textarea class="code-box form-control" rows="10" ng-model="vm.code[0]" placeholder="Code"></textarea>
-  </div>
 
-  <div id="space-for-codes"></div>
+  <div ng-repeat="code in vm.code track by $index">
+    <div class="form-group">
+      <textarea class="code-box form-control" rows="10" ng-model="vm.code[$index]" placeholder="Code"></textarea>
+    </div>
+  </div>
 
 </div>
 
 <div class="modal-footer">
-  <button id="add-code" add-code-box class="btn btn-default">Add code box</button>
+  <button id="add-code" class="btn btn-default" ng-click="vm.addCodeBox()">Add code box</button>
 
   <button id="close-modal" type="button" class="btn btn-default" ng-click="vm.closeModal()"> Close</button>
   <button id="addmemo" type="button" class="btn btn-primary" ng-click="vm.addMemo()" ng-disabled="!vm.title">Save changes</button>
