--- a/public/views/main.html
+++ b/public/views/main.html
@@ -30,10 +30,10 @@
 
           <tbody ui-sortable="vm.sortableOptions" ng-model="vm.memos">
 
-            <tr id="item{{ $index }}" ng-repeat="memo in vm.memos" class="item">
+            <tr id="item{{ i }}" ng-repeat="(i, memo) in vm.memos" class="item">
 
               <td class="doc col-md-4">
-                <button type="button" class="btn btn-info btn-xs edit" ng-click="vm.editMemo($index)" aria-label="Left Align">
+                <button type="button" class="btn btn-info btn-xs edit" ng-click="vm.editMemo(i)" aria-label="Left Align">
                   <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                 </button>
                 <h3 class="title">{{ memo.title }}</h3> 
@@ -43,13 +43,12 @@
               <td class="code col-md-8">
 
                 <table style="width: 100%;">
-                  <tr ng-repeat="code in memo.code" >
+                  <tr ng-repeat="(j, code) in memo.code" >
                     <td>
 
-                      <button type="button" class="btn btn-danger btn-xs remove" ng-click="vm.removeMemo($index)" aria-label="Left Align">
+                      <button type="button" class="btn btn-danger btn-xs remove" ng-click="vm.removeMemo(i,j)" aria-label="Left Align">
                         <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                       </button>
-
 
                       <button clipboard text="memo.code" class="btn btn-info btn-xs copy" on-copied="vm.copySucceed()" on-error="vm.copyFailed(err)" aria-label="Left Align">
                         <span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span>
