[#113146555 finishes] Add copy function to a memo when there are over 2codes

--- a/public/views/main.html
+++ b/public/views/main.html
@@ -50,7 +50,7 @@
                         <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                       </button>
 
-                      <button clipboard text="memo.code" class="btn btn-info btn-xs copy" on-copied="vm.copySucceed()" on-error="vm.copyFailed(err)" aria-label="Left Align">
+                      <button clipboard text="memo.code[j]" class="btn btn-info btn-xs copy" on-copied="vm.copySucceed()" on-error="vm.copyFailed(err)" aria-label="Left Align">
                         <span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span>
                       </button>
 
