--- a/public/views/main.html
+++ b/public/views/main.html
@@ -1,30 +1,53 @@
 <div>
-  <div class="container-fluid">
-    <nav class="navbar navbar-default">
-      <div class="navbar-brand" id="addLink" ng-click="vm.openAddModal()">Add a memo</div>
+
+  <nav class="navbar navbar-fixed-top navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header"><span class="navbar-brand">SPMEMO</span></div>
+
+      <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+
+          <li><a id="addLink" ng-click="vm.openAddModal()">Add a memo</a></li>
+        
+          <input id="lefile" type="file" style="display:none">
+          <li class="input-append">
+            <a id="importLink" ng-click="vm.importMemo()">Import</a>
+          </li>
     
-      <input id="lefile" type="file" style="display:none">
-      <div class="input-append">
-        <a id="importLink" class="navbar-brand" ng-click="vm.importMemo()">Import</a>
+          <li><a id="exportLink" href="{{ vm.href_ex }}">Export</a></li>
+    
+        </ul>
+    
+        <ul class="nav navbar-nav navbar-right">
+          <li class="dropdown" style="padding-top: 10px; padding-bottom: 10px;">
+            <i class="fa fa-github fa-2x dropdown-toggle" id="hubdrop" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></i>
+            <ul class="dropdown-menu" aria-labelledby="hubdrop">
+              <li><a ng-href="api/hub/auth">Sign in</a></li>
+              <li><a id="github" ng-click="vm.openGithubModal()">Open Repo</a></li>
+              <li><a style="padding: 3px 20px;" id="save-to-github" ng-click="vm.saveToGithub()">Save to Repo</a></li>
+              <li role="separator" class="divider"></li>
+              <!-- <li><a href="#">Sign out</a></li> -->
+            </ul>
+          </li>
+        </ul>
       </div>
-      <a class="navbar-brand" id="exportLink" href="{{ vm.href_ex }}">Export</a>
-      <div class="navbar-brand" id="github" ng-click="vm.openGithubModal()">Github</div>
-      <div class="navbar-brand" id="save-to-github" ng-click="vm.saveToGithub()">Save</div>
-      <a class="navbar-brand" href="api/hub/auth">Sign in with Github</a>
-    </nav>
-  </div>
+
+    </div>
+  </nav>
   
   <div class = "container-fluid" id="main">
+
     <div class = "row">
-      <div class="sidebar col-md-2">
-        <h4 id="path">{{ vm.path }}</h4>
-        <ul ng-repeat="file in vm.files">
-          <li><span class="file" ng-click="vm.openGithubMemo(file.name, file.url)" >{{ file.name }}</span></li>
+      <div class="sidebar col-sm-3 col-md-2">
+        <!-- <p id="path">{{ vm.path }}</p> -->
+        <ul class="nav nav-sidebar" ng-repeat="(i, file) in vm.files">
+          <li ng-class="{ active: vm.isActive(i)}"><a class="file" ng-click="vm.openGithubMemo(i)" >{{ file.name }}</a></li>
         </ul>
-        <span>Current: {{ vm.filename }}</span>
+        <span>Connected to:</span>
+          <small>{{ vm.user }}/{{ vm.repo }} </small>
       </div>
   
-      <div class="col-md-10 row">
+      <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
 
         <table id="contentsTbl" class='table'>
 
@@ -33,9 +56,7 @@
             <tr id="item{{ i }}" ng-repeat="(i, memo) in vm.memos" class="item">
 
               <td class="doc col-md-4">
-                <button type="button" class="btn btn-info btn-xs edit" ng-click="vm.editMemo(i)" aria-label="Left Align">
-                  <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                </button>
+                <i class="fa fa-pencil-square-o edit" ng-click="vm.editMemo(i)" aria-label="Left Align"></i>
                 <h3 class="title">{{ memo.title }}</h3> 
                 <p class="description" ng-bind-html="memo.doc"></p>
               </td>
@@ -46,13 +67,8 @@
                   <tr ng-repeat="(j, code) in memo.code" >
                     <td>
 
-                      <button type="button" class="btn btn-danger btn-xs remove" ng-click="vm.removeMemo(i,j)" aria-label="Left Align">
-                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                      </button>
-
-                      <button clipboard text="memo.code[j]" class="btn btn-info btn-xs copy" on-copied="vm.copySucceed()" on-error="vm.copyFailed(err)" aria-label="Left Align">
-                        <span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span>
-                      </button>
+                      <i class="fa fa-trash-o remove" ng-click="vm.removeMemo(i,j)" aria-label="Left Align" ></i>
+                      <i clipboard text="memo.code[j]" class="fa fa-files-o copy" on-copied="vm.copySucceed()" on-error="vm.copyFailed(err)" aria-label="Left Align"></i>
 
                       <pre>
                         <code ng-bind="code"></code>
