--- a/sass/spmemo.scss
+++ b/sass/spmemo.scss
@@ -1,3 +1,6 @@
+body {
+  padding-top: 50px;
+}
 
 pre {
   margin: 0;
@@ -14,15 +17,97 @@ td.code {
   border-top: 0;
 }
 
-textarea#docbox, textarea#codebox {
-}
-
-.navbar-brand {
-  cursor: pointer;
+ul{
+  &>li>a {
+    cursor: pointer;
+  }
+  &>li>i {
+    cursor: pointer;
+    color: #ffffff;
+    margin-right: 20px;
+  }
 }
 
 .error-msg {
   color: red;
+}
+
+
+td i {
+  &.remove, &.copy {
+    float: right;
+    margin-right: 10px;
+    display: none;
+    color: #ffffff;
+    cursor: pointer;
+  }
+  &.edit {
+    float: right;
+    margin-right: 10px;
+    display: none;
+    color: #000000;
+    cursor: pointer;
+  }
+}
+
+td:hover i {
+  display: block;
+}
+
+table#contentsTbl tr {
+  cursor: move;
+}
+
+.main {
+  padding: 20px;
+}
+@media (min-width: 768px) {
+  .main {
+    padding-right: 40px;
+    padding-left: 40px;
+  }
+}
+.main .page-header {
+  margin-top: 0;
+}
+
+.navbar-fixed-top {
+  border: 0;
+}
+
+.sidebar {
+  display: none;
+}
+@media (min-width: 768px) {
+  .sidebar {
+    position: fixed;
+    top: 51px;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
+    display: block;
+    padding: 20px;
+    overflow-x: hidden;
+    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+    background-color: #f5f5f5;
+    border-right: 1px solid #eee;
+  }
+}
+
+.nav-sidebar {
+  margin-right: -21px; /* 20px padding + 1px border */
+  margin-bottom: 20px;
+  margin-left: -20px;
+}
+.nav-sidebar > li > a {
+  padding-right: 20px;
+  padding-left: 20px;
+}
+.nav-sidebar > .active > a,
+.nav-sidebar > .active > a:hover,
+.nav-sidebar > .active > a:focus {
+  color: #fff;
+  background-color: #428bca;
 }
 
 .notransition * {
@@ -31,35 +116,5 @@ textarea#docbox, textarea#codebox {
   -o-transition: none !important;
   -ms-transition: none !important;
   transition: none !important;
-}
-
-td button.btn {
-  float: right;
-  margin-right: 10px;
-  display: none;
-}
-
-td:hover button {
-  display: block;
-}
-
-table#contentsTbl tr {
-  cursor: move;
-}
-
-#main {
-  overflow: hidden;
-}
-
-.sidebar {
-  background-color: #696969;
-  padding-bottom: 10000px;
-  margin-bottom: -10000px;
-  margin-right: 20px;
-}
-
-.sidebar li span{
-  cursor: pointer;
-  display: block;
 }
 
