[#110742998 finishes] Now user can sign out from the site

--- a/public/views/main.html
+++ b/public/views/main.html
@@ -26,7 +26,7 @@
               <li><a id="github" ng-click="vm.openGithubModal()">Open Repo</a></li>
               <li><a style="padding: 3px 20px;" id="save-to-github" ng-click="vm.saveToGithub()">Save to Repo</a></li>
               <li role="separator" class="divider"></li>
-              <!-- <li><a href="#">Sign out</a></li> -->
+              <li><a ng-href="/api/hub/signout">Sign out</a></li>
             </ul>
           </li>
         </ul>
